--- a/c/SysMonitor/SysMonitor.html
+++ b/c/SysMonitor/SysMonitor.html
@@ -1,5 +1,5 @@
 <head>
-  <title>SysMonitor</title>
+  <title>Corto SysMonitor</title>
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha256-7s5uDGW3AHqw6xtJmNNtr+OBRJUlgkNJEo78P4b0yRw= sha512-nNo+yCHEyn0smMxSswnf/OnX6/KwJuZTlNZBjauKhTK0c+zT+q5JOCx0UFhXQ6rJR9jg6Es8gPuD2uZcYDLqSw==" crossorigin="anonymous">
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,500,600' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Source+Code+Pro:400,300' rel='stylesheet' type='text/css'>
@@ -16,7 +16,7 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
-        <li><a href="https://github.com/cortoproject/examples">GITHUB</a></li>
+        <li><a href="https://github.com/cortoproject/examples/tree/master/c/SysMonitor">GITHUB</a></li>
         </ul>
       </div>
     </nav>
@@ -28,7 +28,27 @@
       <div class="col-md-2"></div>
   </div>
 
-  <div class="container-fluid">
+  <div class="container">
+      <div class="col-md-2"></div>
+      <div class="col-md-8 center">
+        <p class="clientsconnected">
+          # of clients connected: {{clients}}
+        </p>
+        <p class="description">
+          A Corto project that uses Meteor to push
+          realtime CPU and memory statistics to a webclient.
+
+          The code uses the Corto DDP server from the
+          <a href="https://github.com/cortoproject/web" target="#">corto/web</a>
+          package to connect to Meteor, and the
+          <a href="https://github.com/cortoproject/sys" target="#">corto/sys</a>
+          package to obtain system statistics.
+        </p>
+      </div>
+      <div class="col-md-2"></div>
+  </div>
+
+  <div class="container">
     <div class="col-md-2"></div>
     <div class="col-md-4">
       <div class="title">
@@ -37,7 +57,6 @@
       <div class="metric">
         {{cpu}}%
       </div>
-      <div class="bar"></div>
     </div>
     <div class="col-md-4">
       <div class="title">
@@ -46,8 +65,99 @@
       <div class="metric">
         {{mem}}%
       </div>
-      <div class="bar"></div>
+    </div>
+    <div class="col-md-2"></div>
+  </div>
+
+  <div class="container">
+    <div class="col-md-2"></div>
+    <div class="col-md-8">
+      {{> cpus}}
+    </div>
+    <div class="col-md-2"></div>
+  </div>
+
+  <div class="container">
+    <div class="col-md-2">
+    </div>
+    <div class="col-md-8">
+      <div class="title">
+        Server-side code
+      </div>
+      <pre class="code"><span class="code-comment">/* Create DDP server on port 8000 */</span>
+<span class="code-function">server_DDPCreateChild</span>(root_o, <span class="code-string">"ddp"</span>, <span class="code-number">8000</span>);
+
+<span class="code-comment">/* Create Stats collection */</span>
+<span class="code-type">corto_object</span> Stats_o = <span class="code-function">corto_voidCreateChild</span>(root_o, <span class="code-string">"Stats"</span>);
+
+<span class="code-comment">/* Create one system monitor for the current system */</span>
+<span class="code-type">sys_Monitor</span> mon_o = <span class="code-function">sys_MonitorCreateChild</span>(Stats_o, <span class="code-string">"mon"</span>);
+
+<span class="code-comment">/* Resolve static cpu information once */</span>
+<span class="code-function">sys_Monitor_refresh</span>(mon_o, <span class="code-constant">Sys_CpuInfo</span>);
+
+<span class="code-comment">/* Infinite update loop */</span>
+<span class="code-keyword">while</span> (<span class="code-number">1</span>) {
+    <span class="code-comment">/* The refresh method obtains new data and updates the object */</span>
+    <span class="code-function">sys_Monitor_refresh</span>(mon_o, <span class="code-constant">Sys_Cpu</span> | <span class="code-constant">Sys_Mem</span>);
+
+    <span class="code-comment">/* Refresh every second */</span>
+    <span class="code-function">corto_sleep</span>(<span class="code-number">1</span>, <span class="code-number">0</span>);
+}</pre>
+    </div>
+    <div class="col-md-2">
+    </div>
+  </div>
+
+  <div class="container">
+    <div class="col-md-2"></div>
+    <div class="col-md-8 center">
+      <p>
+        Register to get updates about new Corto demo's!
+      </p>
+    </div>
+    <div class="col-md-2"></div>
+  </div>
+
+  <div class="container">
+    <div class="col-md-2"></div>
+    <div class="col-md-8 center">
+      <a class='btn btn-action btn-signup btn-outline'
+         href='https://corto.io/signup.html'>
+        Sign up
+      </a>
+      <a class='btn btn-github btn-outline'
+         href='https://github.com/cortoproject/examples/tree/master/c/SysMonitor'
+         target="#">
+        GitHub project
+      </a>
     </div>
     <div class="col-md-2"></div>
   </div>
 </body>
+
+<template name="cpus">
+  <div class="title">
+    CPU cores
+  </div>
+  <table class="cpus">
+    <tr>
+      <th>Vendor</th>
+      <th>Model</th>
+      <th>Clock</th>
+      <th>Cache</th>
+    </tr>
+    {{#each cpu_info}}
+      {{> cpu}}
+    {{/each}}
+  </table>
+</template>
+
+<template name="cpu">
+  <tr>
+    <td class="name">{{vendor}}</td>
+    <td class="name">{{model}}</td>
+    <td class="number">{{mhz}}Mhz</td>
+    <td class="number">{{cache_size}}KB</td>
+  </tr>
+</template>
