--- a/c/web/sys_rest/index.html
+++ b/c/web/sys_rest/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>examples/web/rest</title>
+  <title>examples/web/sys_rest</title>
 </head>
 <body style="background-color: #e06952; font-family: sans-serif">
 
